--- a/app/src/main/res/layout/activity_create_test.xml
+++ b/app/src/main/res/layout/activity_create_test.xml
@@ -45,13 +45,43 @@
     </com.google.android.material.textfield.TextInputLayout>
     <!-- End Of Body Text Field -->
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Вопрос"
+        android:layout_marginBottom="10dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/create_test_question_field"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="25dp"
+            android:background="@drawable/rounded_edittext_background"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Ответ"
+        android:layout_marginBottom="10dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/create_test_answer_field"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="25dp"
+            android:background="@drawable/rounded_edittext_background"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
     <Button
         android:id="@+id/create_test_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Создать тест"
         android:textAllCaps="false"
-
+        android:layout_marginTop="370dp"
         android:backgroundTint="#1e90ff"
         android:paddingVertical="18dp"/>
 
