--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -8,7 +8,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Введите курс"
+        android:background="@drawable/rounded_edittextser_background"
     android:inputType="text"
+        android:textColor="@color/white"
+        android:textColorHint="#c1c1c1"
     android:padding="16dp"
     android:layout_margin="8dp"/>
 
