--- a/app/src/main/res/layout/activity_comment.xml
+++ b/app/src/main/res/layout/activity_comment.xml
@@ -6,11 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:padding="0dp"
     android:background="#1f1f1f"
     tools:context=".CommentActivity">
     <LinearLayout
-        android:id="@+id/to_test"
+        android:id="@+id/comm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingVertical="20dp"
@@ -31,4 +31,38 @@
 
             android:visibility="gone"/>
     </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:padding="16dp">
+
+        <EditText
+            android:id="@+id/comment_edit_text"
+            android:layout_width="0dp"
+            android:layout_centerInParent="true"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/send_comment_button"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:hint="Напишите комментарий..."
+            android:background="@drawable/rounded_edittextser_background"
+            android:padding="10dp"
+            android:layout_marginBottom="10dp"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#B3FFFFFF"/>
+
+        <ImageView
+            android:src="@drawable/paper_plane"
+            android:id="@+id/send_comment_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_centerInParent="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:text="Отправить"
+            android:layout_marginLeft="10dp"/>
+    </RelativeLayout>
+
 </RelativeLayout>
