--- a/app/src/main/res/layout/comment_list.xml
+++ b/app/src/main/res/layout/comment_list.xml
@@ -5,7 +5,14 @@
 
     >
 
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/user"/>
     <!-- Main Note Content Wrapper -->
+
     <LinearLayout
         android:id="@+id/commentItemLayout"
         android:layout_width="match_parent"
@@ -17,7 +24,6 @@
         android:layout_marginTop="10dp"
         android:background="@drawable/rounded_rectangle"
         android:elevation="5dp">
-
 
         <!-- Note Content Container -->
         <LinearLayout
@@ -34,7 +40,7 @@
                 android:layout_height="28dp"
                 android:layout_marginTop="10dp"
                 android:layout_gravity="right"
-                android:src="@drawable/check"/>
+                android:src="@drawable/reply"/>
             <TextView
                 android:id="@+id/user_name"
                 android:layout_width="wrap_content"
@@ -55,6 +61,7 @@
                 android:fontFamily="@font/globersemiboldfree"
                 android:textColor="@color/white"
                 android:text="Комментарий"/>
+
 
 
         </LinearLayout>
