--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="20dp"
     android:background="#1f1f1f"
-
     tools:context=".ProfileActivity">
 
-
-
-
+    <!-- TextView для заголовка раздела персональных данных -->
     <TextView
+        android:id="@+id/textView_personal_data"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="7dp"
@@ -22,12 +19,13 @@
         android:textColor="@color/white"
         android:text="Персональные данные"/>
 
+    <!-- Поле ввода имени -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/txt_prof_first_name_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="30dp"
+        android:layout_below="@id/textView_personal_data">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_prof_first_name"
             android:layout_width="match_parent"
@@ -36,11 +34,13 @@
             android:hint="Имя"/>
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Поле ввода фамилии -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/txt_prof_last_name_layout"
         android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_below="@id/txt_prof_first_name_layout">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_prof_last_name"
             android:layout_width="match_parent"
@@ -49,10 +49,12 @@
             android:hint="Фамилия"/>
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Поле ввода email -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/txt_prof_email_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/txt_prof_last_name_layout"
         android:layout_marginTop="10dp">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_prof_email"
@@ -61,19 +63,8 @@
             android:background="@drawable/rounded_edittext_background"
             android:hint="Email"/>
     </com.google.android.material.textfield.TextInputLayout>
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txt_prof_email_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txt_prof_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_edittext_background"
-            android:hint="Пароль"/>
-    </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Кнопка для обновления профиля -->
     <Button
         android:id="@+id/profile_update_btn"
         android:layout_width="match_parent"
@@ -83,18 +74,7 @@
         android:textAllCaps="false"
         android:textSize="16sp"
         android:backgroundTint="#1e90ff"
-        android:layout_marginTop="30dp"
-        android:paddingVertical="18dp"/>
-    <Button
-        android:id="@+id/profile_logout_btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Выйти"
-        android:fontFamily="@font/globersemiboldfree"
-        android:textAllCaps="false"
-        android:textSize="16sp"
-        android:backgroundTint="#1e90ff"
-       android:layout_marginTop="70dp"
-        android:paddingVertical="18dp"/>
+        android:paddingVertical="18dp"
+        android:layout_alignParentBottom="true"/>
 
-</LinearLayout>
+</RelativeLayout>
