--- a/app/src/main/res/layout/fragment_home_student.xml
+++ b/app/src/main/res/layout/fragment_home_student.xml
@@ -33,7 +33,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
 
-            android:id="@+id/note_list_recycler_view"
+            android:id="@+id/course_list_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="false"
@@ -41,7 +41,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/no_notes"
+        android:id="@+id/no_courses"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#4A4949"
