--- a/app/src/main/res/layout/activity_course_detail_student.xml
+++ b/app/src/main/res/layout/activity_course_detail_student.xml
@@ -36,7 +36,7 @@
 
 
         <TextView
-            android:id="@+id/note_dtl_title"
+            android:id="@+id/course_dtl_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
@@ -47,7 +47,7 @@
             android:layout_marginBottom="10dp"/>
 
         <TextView
-            android:id="@+id/note_dtl_body"
+            android:id="@+id/course_dtl_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="23sp"
