--- a/app/src/main/res/layout/course_list.xml
+++ b/app/src/main/res/layout/course_list.xml
@@ -7,7 +7,7 @@
 
     <!-- Main Note Content Wrapper -->
     <LinearLayout
-        android:id="@+id/noteItemLayout"
+        android:id="@+id/courseItemLayout"
         android:layout_width="match_parent"
         android:layout_height="138dp"
         android:orientation="horizontal"
@@ -39,7 +39,7 @@
                 android:src="@drawable/heart"/>
 
             <TextView
-                android:id="@+id/note_title"
+                android:id="@+id/course_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
@@ -49,7 +49,7 @@
                 android:textColor="@color/white"
                 android:text="Название курса"/>
             <TextView
-                android:id="@+id/note_body"
+                android:id="@+id/course_body"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/globersemiboldfree"
