--- a/app/src/main/res/layout/activity_create_course.xml
+++ b/app/src/main/res/layout/activity_create_course.xml
@@ -20,10 +20,11 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/create_course_title_field"
             android:layout_width="match_parent"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
             android:layout_height="wrap_content"
             android:paddingTop="25dp"
-            android:background="@drawable/rounded_edittext_background"
-            />
+            android:background="@drawable/rounded_edittextser_background"            />
     </com.google.android.material.textfield.TextInputLayout>
     <!-- End Of Title Text Field -->
 
@@ -39,8 +40,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="25dp"
-            android:background="@drawable/rounded_edittext_background"
+            android:textColor="@color/black"
+            android:background="@drawable/rounded_edittextser_background"
             android:gravity="top"
+            android:textColorHint="@color/black"
             android:lines="7"/>
     </com.google.android.material.textfield.TextInputLayout>
     <!-- End Of Body Text Field -->
@@ -51,6 +54,7 @@
         android:layout_height="wrap_content"
         android:text="Cоздать курс"
         android:textAllCaps="false"
+
         android:backgroundTint="#1e90ff"
         android:paddingVertical="18dp"/>
 
