--- a/app/src/main/res/drawable/radio_button_text_color_selector.xml
+++ b/app/src/main/res/drawable/radio_button_text_color_selector.xml
@@ -1,4 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true" android:color="#2196F3" /> <!-- Синий цвет текста при выборе -->
-    <item android:color="@color/white" /> <!-- Белый цвет текста по умолчанию -->
+    <item android:color="@color/light_grey" /> <!-- Белый цвет текста по умолчанию -->
 </selector>
