--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -69,6 +69,33 @@
             android:text="Создать тест"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"/>
+        <Button
+            android:id="@+id/update_course_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#1e90ff"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/globersemiboldfree"
+            android:paddingLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="15dp"
+            android:text="Редактировать курс"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"/>
+
+        <Button
+            android:id="@+id/delete_course_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#BC1C1C"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/globersemiboldfree"
+            android:paddingLeft="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="15dp"
+            android:text="Удалить курс"
+            android:textAllCaps="false"
+            android:textColor="#FFFFFF"/>
         <androidx.recyclerview.widget.RecyclerView
 
             android:id="@+id/test_list_recycler_view"
@@ -82,16 +109,5 @@
     <!-- End Of Note Detail Wrapper -->
 
 
-    <TextView
-        android:id="@+id/delete_course_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="30dp"
-        android:text="Удалить курс"
-
-        android:textSize="18sp"
-        android:textColor="#C34040" />
 
 </RelativeLayout>
