--- a/app/src/main/res/layout/activity_create_test.xml
+++ b/app/src/main/res/layout/activity_create_test.xml
@@ -22,7 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="25dp"
-            android:background="@drawable/rounded_edittext_background"
+            android:textColorHint="@color/white"
+           android:background="@drawable/rounded_edittextser_background"
             />
     </com.google.android.material.textfield.TextInputLayout>
     <!-- End Of Title Text Field -->
@@ -39,7 +40,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="25dp"
-            android:background="@drawable/rounded_edittext_background"
+            android:textColorHint="@color/white"
+            android:background="@drawable/rounded_edittextser_background"
             android:gravity="top"
             android:lines="7"/>
     </com.google.android.material.textfield.TextInputLayout>
@@ -56,7 +58,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="25dp"
-            android:background="@drawable/rounded_edittext_background"
+
+            android:textColorHint="@color/white"
+            android:background="@drawable/rounded_edittextser_background"
             />
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
@@ -70,7 +74,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="25dp"
-            android:background="@drawable/rounded_edittext_background"
+            android:textColorHint="@color/white"
+            android:background="@drawable/rounded_edittextser_background"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -81,7 +86,7 @@
         android:layout_height="wrap_content"
         android:text="Создать тест"
         android:textAllCaps="false"
-        android:layout_marginTop="370dp"
+        android:layout_marginTop="0dp"
         android:backgroundTint="#1e90ff"
         android:paddingVertical="18dp"/>
 
