--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,126 +1,128 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     android:background="#1a1a1a"
-    android:padding="15dp"
-    tools:context=".LoginActivity">
+    android:padding="16dp">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/splashfor" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/globersemiboldfree"
+        android:text="Вход"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txt_email_layout"
+        style="@style/NoUnderlineTextInputLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:boxCollapsedPaddingTop="8dp"
+        app:endIconMode="clear_text"
+        app:errorEnabled="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txt_email"
+            android:layout_width="match_parent"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_edittext_background"
+            android:hint="Email"
+            android:inputType="textEmailAddress" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txt_password_layout"
+        style="@style/NoUnderlineTextInputLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:endIconMode="password_toggle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_email_layout">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txt_password"
+            android:layout_width="match_parent"
+            android:textColor="@color/black"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_edittext_background"
+            android:hint="Пароль"
+            android:textColorHint="@color/black"
+            android:inputType="textPassword" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/login_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#1e90ff"
+        android:enabled="false"
+        android:fontFamily="@font/globersemiboldfree"
+        android:text="Войти"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_password_layout" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="298dp"
-            android:layout_height="234dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="13dp"
-            app:srcCompat="@drawable/splashfor" />
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_btn">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/globersemiboldfree"
-            android:layout_marginVertical="10dp"
-            android:textAlignment="center"
-            android:textSize="40sp"
-            android:textColor="#FFFFFF"
-            android:text="Вход"
-            android:textFontWeight="700"/>
+            android:text="Еще нет аккаунта?"
+            android:textColor="@color/white" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/NoUnderlineTextInputLayout"
-            android:id="@+id/txt_email_layout"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/txt_go_to_sign_up"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            app:boxCollapsedPaddingTop="8dp"
-            app:errorEnabled="true"
-            android:elevation="0dp"
-            app:boxStrokeWidth="0dp"
-            android:paddingTop="20dp"
-            >
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txt_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:hintAnimationEnabled="false"
-                android:background="@drawable/rounded_edittext_background"
-                android:hint="Email"
-                android:inputType="textEmailAddress" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            style="@style/NoUnderlineTextInputLayout"
-            android:id="@+id/txt_password_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="password_toggle"
-            android:layout_marginTop="20dp">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/txt_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/rounded_edittext_background"
-                android:hint="Пароль"
-                android:inputType="textPassword" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-
-        <Button
-            android:id="@+id/login_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:backgroundTint="#1e90ff"
-            android:enabled="false"
+            android:layout_marginLeft="10dp"
             android:fontFamily="@font/globersemiboldfree"
-            android:text="Войти"
-            android:textAllCaps="false"
-            android:textColor="#FFFFFF" />
+            android:text="Регистрация"
+            android:textColor="#1e90ff" />
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_marginTop="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textColor="@color/white"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/globersemiboldfree"
-                android:text="Еще нет аккаунта?"/>
-
-            <TextView
-                android:id="@+id/txt_go_to_sign_up"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:textColor="#1e90ff"
-                android:fontFamily="@font/globersemiboldfree"
-                android:text="Регистрация"/>
-            <TextView
-                android:id="@+id/txt_go_to_guest"
-                android:layout_width="300dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="90dp"
-                android:textColor="#1e90ff"
-                android:fontFamily="@font/globersemiboldfree"
-                android:text="Войти как гость"/>
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/txt_go_to_guest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:fontFamily="@font/globersemiboldfree"
+            android:text="Войти как гость"
+            android:textColor="#1e90ff" />
 
     </LinearLayout>
 
-
-
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
