--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -25,13 +25,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:hint="Имя"
+        app:hintTextColor="@color/black"
         android:layout_below="@id/textView_personal_data">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_prof_first_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/rounded_edittext_background"
-            android:hint="Имя"/>
+            android:textColor="@color/white"
+            android:background="@drawable/rounded_edittextser_background"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <!-- Поле ввода фамилии -->
@@ -44,8 +46,9 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txt_prof_last_name"
             android:layout_width="match_parent"
+            android:textColorHint="@color/black"
             android:layout_height="wrap_content"
-            android:background="@drawable/rounded_edittext_background"
+            android:background="@drawable/rounded_edittextser_background"
             android:hint="Фамилия"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -53,6 +56,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/txt_prof_email_layout"
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
         android:layout_below="@id/txt_prof_last_name_layout"
         android:layout_marginTop="10dp">
@@ -60,7 +64,9 @@
             android:id="@+id/txt_prof_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/rounded_edittext_background"
+
+            android:textColorHint="@color/black"
+            android:background="@drawable/rounded_edittextser_background"
             android:hint="Email"/>
     </com.google.android.material.textfield.TextInputLayout>
 
