--- a/app/src/main/res/layout/course_list.xml
+++ b/app/src/main/res/layout/course_list.xml
@@ -1,69 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
-    >
+    android:layout_marginBottom="5dp"
+    android:layout_marginHorizontal="15dp"
+    android:paddingHorizontal="5dp"
+    android:layout_marginTop="10dp"
+    android:padding="10dp"
+    android:background="@drawable/rounded_rectangle"
+    android:elevation="5dp"
+    android:id="@+id/courseItemLayout">
 
     <!-- Main Note Content Wrapper -->
-    <LinearLayout
-        android:id="@+id/courseItemLayout"
-        android:layout_width="match_parent"
-        android:layout_height="138dp"
-        android:orientation="horizontal"
-        android:layout_marginBottom="5dp"
-        android:layout_marginHorizontal="15dp"
-        android:paddingHorizontal="5dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/rounded_rectangle"
-        android:elevation="5dp">
 
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/favorite_btn"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:ignore="MissingConstraints">
 
         <!-- Note Content Container -->
-        <LinearLayout
-            android:background="@drawable/rounded_rectangle"
+<!--        <TextView-->
+<!--            android:id="@+id/course_category_header"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="10dp"-->
+<!--            android:fontFamily="@font/globersemiboldfree"-->
+<!--            android:text="Категория: Программирование"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="14sp" />-->
+
+        <TextView
+            android:id="@+id/course_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/globersemiboldfree"
+            android:textColor="@color/white"
+            android:text="Название курса"/>
 
-            android:orientation="vertical"
-            android:layout_marginLeft="10dp"
-            android:padding="5dp">
-
-            <ImageView
-                android:id="@+id/favorite_btn"
-                android:layout_width="28dp"
-                android:layout_height="28dp"
-                android:fontFamily="@font/globersemiboldfree"
-                android:layout_marginTop="10dp"
-                android:layout_gravity="right"
-                android:src="@drawable/heart"/>
-
-            <TextView
-                android:id="@+id/course_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="24sp"
-                android:layout_marginTop="-30dp"
-                android:layout_marginBottom="20dp"
-                android:fontFamily="@font/globersemiboldfree"
-                android:textColor="@color/white"
-                android:text="Название курса"/>
-            <TextView
-                android:id="@+id/course_body"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/globersemiboldfree"
-                android:textColor="@color/white"
-
-                android:text="Описание курса"
-
-                android:textSize="18sp"/>
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/course_body"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:fontFamily="@font/globersemiboldfree"
+            android:textColor="@color/white"
+            android:text="Описание курса"
+            android:layout_marginTop="20dp"/>
         <!-- End Of Note Content Container -->
 
-
     </LinearLayout>
-    <!-- End Of Main Note Content Wrapper -->
 
-</LinearLayout>
+    <!-- ImageView for the heart icon aligned to the right -->
+    <ImageView
+        android:id="@+id/favorite_btn"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginTop="10dp"
+        android:src="@drawable/heart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- End Of Main Note Content Wrapper -->
