--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,9 +12,9 @@
     <color name="colorAccent">#FF4081</color> <!-- Акцентный цвет -->
 
     <!-- Custom Colors -->
-    <color name="midnight_purple_dark">#2F2E41</color>
+    <color name="midnight_purple_dark">#000000</color>
     <color name="error_color">#E74C3C</color>
-    <color name="midnight_purple">#444357</color>
+    <color name="midnight_purple">#000000</color>
     <color name="tropical_green">#00BFA6</color>
 
     <color name="purple_500">#FF6200EE</color>
